--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,8 @@
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
-                <version>${javafx.maven.plugin.version}</version>
+                <version>0.0.8</version>
+
                 <configuration>
                     <mainClass>org.View.App</mainClass>
                 </configuration>
