--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,10 @@
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
-                <version>${javafx.maven.plugin.version}</version>
+<!--                <version>${javafx.maven.plugin.version}</version>-->
+<!--                    <javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>-->
+                <version>0.0.8</version>
+
                 <configuration>
                     <mainClass>org.View.App</mainClass>
                 </configuration>
